--- a/app/views/bingo_games/_form.html.erb
+++ b/app/views/bingo_games/_form.html.erb
@@ -32,11 +32,11 @@
               <%= f.input :group_option, label: "Group submissions allowed?" %>
             </td>
           </tr>
-          <tr id="group_options">
+          <tr id="group_options" style="<%= @bingo_game.group_option ? '' : 'display:none' %>">
             <td>
               <%= f.input :group_discount, label: "Percent fewer terms if working in a group" %>
             </td>
-            <td rowspan="2" width="10%" align="center" valign="center">&nbsp;</td>
+            <td width="10%" align="center" valign="center">&nbsp;</td>
             <td>
               <%= f.input :project_id,
                 collection: @bingo_game.course.projects.each.to_a,
@@ -48,6 +48,7 @@
             <td >
               <%= f.input :start_date, as: :date_time_local, label: "Bingo Game start date" %>
             </td>
+            <td width="10%" align="center" valign="center">&nbsp;</td>
             <td >
               <%= f.input :end_date, as: :date_time_local, label: "Bingo Game end date" %>
             </td>
