--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -158,7 +158,7 @@
 </div>
   <div id="weekly" class="ui-body-<%= theme_code %> ui-content">
     <h3>Week View</h3>
-    <%= week_calendar attribute: :end_date, events: tasks,  number_of_weeks: 2 do |date,meetings| %>
+    <%= week_calendar attribute: :next_deadline, events: tasks,  number_of_weeks: 2 do |date,meetings| %>
       <h4 style="font-weight:300;font-size:10px;text-align:center">
         <%= t('date.abbr_month_names' )[date.month] %> <%= date.day %>
       </h4>
@@ -174,7 +174,7 @@
   </div>
   <div id="monthly" class="ui-body-<%= theme_code %> ui-content">
     <h3>Month View</h3>
-    <%= month_calendar attribute: :end_date, events: tasks  do |date,meetings| %>
+    <%= month_calendar attribute: :next_deadline, events: tasks  do |date,meetings| %>
       <h4 style="font-weight:300;font-size:10px;text-align:center">
         <%= t('date.abbr_month_names' )[date.month] %> <%= date.day %>
       </h4>
