--- a/app/views/bingo_games/_form.html.erb
+++ b/app/views/bingo_games/_form.html.erb
@@ -20,28 +20,28 @@
         <table width="100%">
           <tr>
             <td>
-              <%= f.input( :individual_count, label: t ('bingo_games.ind_term_count') ) %>
+              <%= f.input :individual_count, :label => (t 'bingo_games.ind_term_count' ) %>
             </td>
             <td></td>
             <td>
-              <%= f.input( :lead_time, label: t ('bingo_games.days_for_prep') ) %>
+              <%= f.input :lead_time, :label => ( t 'bingo_games.days_for_prep')  %>
             </td>
           </tr>
           <tr>
             <td colspan="3">
-              <%= f.input( :group_option, label: t ('bingo_games.group_option') ) %>
+              <%= f.input :group_option, :label => ( t 'bingo_games.group_option') %>
             </td>
           </tr>
           <tr id="group_options" style="<%= @bingo_game.group_option ? '' : 'display:none' %>">
             <td>
-              <%= f.input( :group_discount, label: t ('bingo_games.group_discount' )) %>
+              <%= f.input :group_discount, :label => ( t 'bingo_games.group_discount') %>
             </td>
             <td width="10%" align="center" valign="center">&nbsp;</td>
             <td>
               <%= f.input :project_id,
                 collection: @bingo_game.course.projects.each.to_a,
                 prompt: true,
-                label: t 'bingo_games.group_source' %>
+                label: (t 'bingo_games.group_source') %>
             </td>
           </tr>
           <tr>
@@ -73,7 +73,7 @@
   <p><%= t :coming_soon %></p>
 </div>
 <div id="responses" class="ui-body-<%= theme_code %> ui-content">
-  <h2><%= resp_data %></h2>
+  <h2><%= t :resp_data %></h2>
           <p>
             <% if @bingo_game.reviewed %>
               <% candidate_feedbacks = CandidateFeedback.all %>
