--- a/app/views/installments/new.html.erb
+++ b/app/views/installments/new.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t: 'installments.subtitle' %></h2>
+<h2><%= t 'installments.subtitle' %></h2>
 <% if flash[:notice] %>
   <p class="notice"><%= flash[:notice] %></p>
 <% end %>
