--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -16,40 +16,43 @@
           if @candidate_list.bingo_game.group_option? &&
               @candidate_list.bingo_game.project.group_for_user( @current_user ).present? %>
           <% if @candidate_list.is_group? %>
-            <em>on behalf of: <%= @candidate_list.group.get_name( anonymize ) %></em>
+            <em><%= t '.behalf' %>: <%= @candidate_list.group.get_name( anonymize ) %></em>
           <% else %>
             <% if @candidate_list.group_requested # Have you already requested collaboration? %>
-              [Still awaiting a response to your group help request]
+              [<%= t '.waiting' %>]
             <% elsif @candidate_list.others_requested_help > 0 # Is your team waiting to hear from you? %>
-              Your team wants to collaborate: 
-              <%= link_to "Accept", request_bingo_collaboration_path( 
+              <%= t '.req_rec' %>: 
+              <%= link_to (t :accept ), request_bingo_collaboration_path( 
                         id: @candidate_list.id, desired: "yes" ),
-                        data: { confirm: 'Are you sure? Did you save your changes? This cannot be undone.' } %> or
-              <%= link_to "Decline", request_bingo_collaboration_path( 
+                        data: { confirm: (t '.confirm_accept' ) } %> or
+              <%= link_to (t :decline ), request_bingo_collaboration_path( 
                         id: @candidate_list.id, desired: "no" ), 
-                        data: { confirm: 'Are you sure? Did you save your changes?' } %> 
+                        data: { confirm: (t '.confirm_decline' ) } %> 
             <% else %>
-              <%= link_to "Invite your group to help?", request_bingo_collaboration_path( 
+              <%= link_to ( t '.req_help' ), request_bingo_collaboration_path( 
                         id: @candidate_list.id, desired: "yes" ), 
-                        data: { confirm: 'Are you sure? Did you save your changes? This cannot be undone.' } %> 
+                        data: { confirm: (t '.confirm_accept' ) } %> 
             <% end %>
           <% end %>
         <% end %>
     </tr>
     <tr>
-      <th align="right">Game date:</th>
+      <th align="right"><%= t 'bingo_games.date' %>:</th>
       <td><%= @candidate_list.bingo_game.end_date %>
     </tr>
+    <tr>
+      <td colspan='2'><%= t '.instructions' %></td>
+    </tr>
   </table>
-  <h2>Terms</h2>
+  <h2><%= t '.terms' %></h2>
   <table id="candidates_table" width="100%"
         class="table-stroke-ui ui-shadow table-stripe table-ui-responsive" >
     <thead>
       <tr>
         <th width="5%" >#</th>
-        <th width="5%" >Possible Duplicate</th>
-        <th width="30%">Term</th>
-        <th>Definition</th>
+        <th width="5%" ><%= t '.dup' %></th>
+        <th width="30%"><%= t '.term' %></th>
+        <th><%= t '.def' %></th>
       </tr>
     </thead>
     <tbody>
