--- a/app/views/candidate_lists/list_stats.html.erb
+++ b/app/views/candidate_lists/list_stats.html.erb
@@ -4,15 +4,25 @@
     id="stats_table"
     data-mode="columntoggle"
     data-column-btn-theme="<%= theme_code %>"
-    data-column-btn-text="Show/hide columns&hellip;"
+    data-column-btn-text="<%= t :column_select %>"
     class="table-stroke ui-shadow table-stripe table-ui-responsive">
     <thead><% candidate_feedbacks = CandidateFeedback.all %>
       <tr>
-        <th colspan="<%= candidate_feedbacks.count %>" data-priority="1">Challenged Responses</th>
-        <th data-priority="0">Concepts Expected</th>
-        <th data-priority="0">Terms Entered</th>
-        <th data-priority="0">Terms Found</th>
-        <th data->Performance</th>
+        <th colspan="<%= candidate_feedbacks.count %>" data-priority="1">
+          <%= t 'bingo_games.resp_challenged' %>
+        </th>
+        <th data-priority="0">
+          <%= t 'bingo_games.resp_con_expct' %>
+        </th>
+        <th data-priority="0">
+          <%= t 'bingo_games.resp_term_count' %>
+        </th>
+        <th data-priority="0">
+          <%= t 'bingo_games.resp_con_count' %>
+        </th>
+        <th data->
+          <%= t 'bingo_games.resp_perf' %>
+        </th>
       </tr>
       <tr>
         <% candidate_feedbacks.each do |cf| %>
@@ -39,20 +49,28 @@
     </tbody>
   <table>
   <p>
-  You <%= "and your group, #{@candidate_list.group.get_name( anonymize )}, " if @candidate_list.is_group %> identifed the
-  following terms, resulting in <% @candidate_list.get_concepts.count %> unique concepts:
+  <%= @candidate_list.is_group ? 
+    (t 'candidate_lists.grp_sum_msg',
+        grp_name: @candidate_list.group.get_name( anonymize ),
+        con_count: @candidate_list.get_concepts.count ) :
+    (t 'candidate_lists.ind_sum_msg',
+        con_count: @candidate_list.get_concepts.count ) %>:
   <table data-role="table"
     id="candidates_table"
     data-mode="columntoggle"
     data-column-btn-theme="<%= theme_code %>"
-    data-column-btn-text="Show/hide columns&hellip;"
+    data-column-btn-text="<%= t :column_select %>"
     class="table-stroke ui-shadow table-stripe table-ui-responsive">
     <thead>
       <tr>
-        <th>Term</th>
-        <th data-priority="0">Definition</th>
-        <th data-priority="0">Feedback</th>
-        <th>Concept</th>
+        <th><%= t '.term' %></th>
+        <th data-priority="0"><%= t '.def' %></th>
+        <th data-priority="0">
+          <%= t 'bingo_games.feedback' %>
+        </th>
+        <th>
+          <%= t 'bingo_games.concept' %>
+        </th>
       </tr>
     </thead>
     <tbody>
