--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -44,14 +44,14 @@
       <td colspan='2'><%= t '.instructions' %></td>
     </tr>
   </table>
-  <h2><%= t '.terms' %></h2>
+  <h2><%= t 'candidate_lists.terms' %></h2>
   <table id="candidates_table" width="100%"
         class="table-stroke-ui ui-shadow table-stripe table-ui-responsive" >
     <thead>
       <tr>
         <th width="5%" >#</th>
         <th width="5%" ><%= t '.dup' %></th>
-        <th width="30%"><%= t '.term' %></th>
+        <th width="30%"><%= t 'candidate_lists.term' %></th>
         <th><%= t '.def' %></th>
       </tr>
     </thead>
