--- a/app/views/administrative_mailer/re_invite.html.erb
+++ b/app/views/administrative_mailer/re_invite.html.erb
@@ -4,25 +4,20 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Hello!</h1>
+    <h1><%= t :greeting_unknown %><h1>
     <p>
-      You've been invited to participate in the following
-          course<%= "s" unless @user.rosters.count < 2 %>:
-          </P>
+      <%= t :course_invite_body, count: @user.rosters.count %>
+    </P>
     <ul>
       <% @user.rosters.each do |roster| %>
         <li><%= roster.course.name %></li>
       <% end %>
     </ul>
     <P>
-      Please log into <%= link_to root_url, root_url %> to
-          accept or decline this enrollment.
+      <%= t :course_invite_close, link_to( t( :title ), root_url ) %>
+    </p>
           
-      <P>
-        Thank you!
-          </P>
-      <P>
-        CoLab Support
-          </p>
+    <P><%= t :email_close %></p>
+    <P><%= t :support_formal %></p>
     </body>
   </html>
