--- a/app/views/bingo_games/_form.html.erb
+++ b/app/views/bingo_games/_form.html.erb
@@ -55,7 +55,7 @@
           </tr>
           <tr>
             <td colspan="3">
-              <em><%= t 'bingo_games.tz_warn', time_zone: @bingo_game.course.timezone %></em>
+              <em><%= t :note %>: <%= t 'bingo_games.tz_warn', time_zone: @bingo_game.course.timezone %></em>
               </br>
               </br>
             </td>
