--- a/app/views/bingo_games/new.html.erb
+++ b/app/views/bingo_games/new.html.erb
@@ -1,3 +1,3 @@
-<h1>New Bingo Game</h1>
+<h1><%= t '.title' %></h1>
 <%= render 'form' %>
-<%= link_to 'Back to course', @bingo_game.course %>
+<%= link_to( t( :back_to_course ), @bingo_game.course) %>
