--- a/app/views/candidate_lists/list_stats.html.erb
+++ b/app/views/candidate_lists/list_stats.html.erb
@@ -63,7 +63,7 @@
     class="table-stroke ui-shadow table-stripe table-ui-responsive">
     <thead>
       <tr>
-        <th><%= t '.term' %></th>
+        <th><%= t 'candidate_lists.term' %></th>
         <th data-priority="0"><%= t '.def' %></th>
         <th data-priority="0">
           <%= t 'bingo_games.feedback' %>
@@ -78,8 +78,8 @@
       <tr>
         <td><%= candidate.term %></td>
         <td><%= candidate.definition %></td>
-        <td><%= candidate.candidate_feedback.present? ? candidate.candidate_feedback.name : "N/A" %></td>
-        <td><%= candidate.concept.present? ? candidate.concept.name : "N/A" %></td>
+        <td><%= candidate.candidate_feedback.present? ? candidate.candidate_feedback.name : t :n_a %></td>
+        <td><%= candidate.concept.present? ? candidate.concept.name : t :n_a %></td>
       </tr>
     <% end %>
     </tbody>
