--- a/app/views/candidate_lists/show.html.erb
+++ b/app/views/candidate_lists/show.html.erb
@@ -10,7 +10,7 @@
       <td><%= @candidate_list.bingo_game.end_date %>
     </tr>
   </table>
-  <h2>Terms</h2>
+  <h2><%= t 'candidate_lists.terms' %></h2>
   <table id="concept_table" width="100%"
         class="table-stroke-ui ui-shadow table-stripe table-ui-responsive" >
     <thead>
