--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -1,3 +1,3 @@
-<h1>New Experience</h1>
+<h1><%= t '.title' %></h1>
 <%= render 'form' %>
-<%= link_to 'Back to course', @experience.course %>
+<%= link_to t :back_to_course, @experience.course %>
