--- a/app/views/experiences/next.html.erb
+++ b/app/views/experiences/next.html.erb
@@ -2,7 +2,7 @@
 <div style="display: none" id="w_num"><%= @diagnosis.week.week_num %></div>
 <div class="ui-corner-all custom-corners">
   <div class="ui-bar ui-bar-a">
-    <h3>Journal entry: Week <%= @diagnosis.week.week_num %></h3>
+    <h3><%= t '.journal', week_num: @diagnosis.week.week_num %></h3>
   </div>
   <div class="ui-body ui-body-a">
     <%= @diagnosis.week.text.html_safe %>
@@ -18,7 +18,7 @@
   <% end %>
   <div class="ui-corner-all custom-corners">
     <div class="ui-bar ui-bar-a">
-      <h3>Which behavior best characterizes this group now?</h3>
+      <h3><%= t '.prompt' %></h3>
     </div>
     <div class="ui-body ui-body-a">
       <%= f.association :behavior, :collection => Behavior.all, :as => :radio_buttons, label: false, :error => false %>
@@ -28,15 +28,15 @@
         <% else %>
           <div style="display: none" id="other_name_panel">
           <% end %>
-          <%= f.input :other_name, label: "What behavior did you see?" %><br>
+          <%= f.input :other_name, label: (t '.other') %><br>
         </div>
       </div>
     </div>
     <div data-role="collapsible">
-      <h3>Click here if you have additional comments for us regarding this narrative.</h3>
-      <%= f.input :comment, as: :text, size: "24x6", label: "Your comments:" %>
+      <h3><%= t '.click_for_comment' %></h3>
+      <%= f.input :comment, as: :text, size: "24x6", label: ( t '.comments' ) %>
     </div>
     <br>
     <br>
-    <%= f.submit "Save and continue" %>
+    <%= f.submit t '.save_and_continue'  %>
   <% end %>
