--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,13 +7,13 @@
 <div data-role="tabs" id="tabs">
   <div data-role="navbar">
     <ul>
-      <li><a href="#weekly" data-ajax="false">Week View</a></li>
-      <li><a href="#tasks" data-ajax="false">Task View</a></li>
-      <li><a href="#monthly" data-ajax="false">Month View</a></li>
+      <li><a href="#weekly" data-ajax="false"><%= t :week_view %></a></li>
+      <li><a href="#tasks" data-ajax="false"><%= t :task_view %></a></li>
+      <li><a href="#monthly" data-ajax="false"><%= t :month_view %></a></li>
     </ul>
   </div>
   <div id="tasks" class="ui-body-<%= theme_code %> ui-content">
-    <h3>Task List</h3>
+    <h3><%= t :task_view %></h3>
 <% if @waiting_instructor_tasks.any? %>
 <h4><%= t :instructor_tasks %></h4>
   <table data-role="table"
@@ -157,7 +157,7 @@
 <% end %>
 </div>
   <div id="weekly" class="ui-body-<%= theme_code %> ui-content">
-    <h3>Week View</h3>
+    <h3><%= t :week_view %></h3>
     <%= week_calendar attribute: :next_deadline, events: tasks,  number_of_weeks: 2 do |date,meetings| %>
       <h4 style="font-weight:300;font-size:10px;text-align:center">
         <%= t('date.abbr_month_names' )[date.month] %> <%= date.day %>
@@ -173,7 +173,7 @@
     <% end %>
   </div>
   <div id="monthly" class="ui-body-<%= theme_code %> ui-content">
-    <h3>Month View</h3>
+    <h3><%= t :month_view %></h3>
     <%= month_calendar attribute: :next_deadline, events: tasks  do |date,meetings| %>
       <h4 style="font-weight:300;font-size:10px;text-align:center">
         <%= t('date.abbr_month_names' )[date.month] %> <%= date.day %>
