--- a/app/views/layouts/experiences.html.erb
+++ b/app/views/layouts/experiences.html.erb
@@ -32,7 +32,7 @@
         <div id="progressbar" style="width: 50%; margin: auto">
           <% if !@diagnosis.nil? && !@diagnosis.week.nil? %>
             <div style="width: <%= @diagnosis.week.percent_complete %>%">
-              <center><%= @diagnosis.week.percent_complete %>% Complete</center>
+              <center><%= @diagnosis.week.percent_complete %>% <%= t :complete %></center>
             <% else %>
               <div style="width: 98%">
               <% end %>
