--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,3 +1,3 @@
-<h1>New Project</h1>
+<h1><%= t '.title' %></h1>
 <%= render 'form' %>
-<%= link_to 'Back to course', @project.course %>
+<%= link_to t( :back_to_course ), @project.course %>
