--- a/app/views/shared/_instructions.html.erb
+++ b/app/views/shared/_instructions.html.erb
@@ -1,22 +1,11 @@
 <p>
-
-In this experience, you will read a weekly journal written by a student in a
-semester-long collaborative group project. The entries document the fourteen
-(14) weeks of the project. The student is fictional, so his or her privacy is
-immaterial. As you read each narrative, you will decide <em>which
-<strong>one</strong> of the listed behaviors <strong>best</strong>
-characterizes the group's dynamic that week.</em>
-
+  <%= t( 'experiences.inst_p1' ) %>
 </p>
 
 <p>
-After you have performed the above task for the fourteen weeks
-of the narrative, you will be asked for your overall evaluation
-of the group's behavior, using the same list of behaviors.
+  <%= t( 'experiences.inst_p2' ) %>
 </p>
 
 <p>
-Please <em>do not use your browser's <strong>back</strong> button</em> during
-the experience. If you need to stop for any reason, you can pick up where you
-left off whenever you return.
+  <%= t( 'experiences.inst_p3' ) %>
 </p>
