--- a/app/views/shared/_scenario.html.erb
+++ b/app/views/shared/_scenario.html.erb
@@ -1,20 +1,11 @@
 <p>
-Students in this class are working on a research paper in groups of four, with
-three other students they've not worked with before. They will have 14 weeks to
-complete the paper.
+  <%= t 'experiences.scenario_p1' %>
 </p>
 
 <p>
-The first assignment, due in week 5, is to submit the group's selected paper
-topic and a preliminary list of references with summaries. In week 9, students
-will turn in a rough draft.  Week 13 will see each group making a formal
-presentation of their work to the entire class and the final paper will be
-delivered to the instructor by the end of week 14.
+  <%= t 'experiences.scenario_p2' %>
 </p>
 
 <p>
-Each group is expected to meet and work on this project outside of class, and
-it is recommended that they schedule recurring meetings. Finally, each student
-is required to maintain a weekly reflective journal detailing every member's
-contributions so the instructor can understand how the group works together.
+  <%= t 'experiences.scenario_p3' %>
 </p>
